tests/errors/semantics/duplicated_decls.odl
main :: () -> void  {
    x := 1;
    x := false;
    x;
};